// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSecret /> should display the secret if provided 1`] = `
<div>
  <div
    className="col-md-8"
  >
    <a
      data-toggle="collapse"
      href="#client-secret-generation"
    >
      Regenerate clientSecret
    </a>
    <div
      className="collapse panel panel-danger"
      data-toggle="collapse"
      id="client-secret-generation"
    >
      <div
        className="panel-body"
      >
        <ErrorAlert
          error=""
        />
        <LoadingSpinner
          loading={false}
          message="Loading..."
        />
        <p>
          <strong>
            Here is your new clientSecret. Make sure to copy it now. You will not be able to see it again.
          </strong>
          <br />
          <code>
            a-test-secret
          </code>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AppSecret /> should not display the secret if not provided 1`] = `
<div>
  <div
    className="col-md-8"
  >
    <a
      data-toggle="collapse"
      href="#client-secret-generation"
    >
      Regenerate clientSecret
    </a>
    <div
      className="collapse panel panel-danger"
      data-toggle="collapse"
      id="client-secret-generation"
    >
      <div
        className="panel-body"
      >
        <ErrorAlert
          error=""
        />
        <LoadingSpinner
          loading={false}
          message="Loading..."
        />
        <div>
          <p>
            You can regenerate your clientSecret below.
          </p>
          <p>
            <strong>
              WARNING: 
            </strong>
            This process will clear your old clientSecret and require updates to your apps or scripts.
          </p>
          <button
            className="btn orange small"
            onClick={[Function]}
            type="button"
          >
            Regenerate clientSecret
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
